// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecipeTableListing type: Favorites should render list of recipes with actions if owner 1`] = `
<table
  className="my-recipe__manage--table"
>
  <thead>
    <tr>
      <th
        colSpan={null}
      >
        Name
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <RecipeTableListingRow
      asOwner={true}
      index={0}
      key="3"
      recipe={
        Object {
          "User": Object {
            "fullname": "John Bull",
            "id": 8,
            "username": null,
          },
          "createdAt": "2017-11-03T09:51:16.180Z",
          "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 3,
          "img_url": "https://firebasestorage.googleapis.com/v0/b/more-recipes.appspot.com/o/recipes%2F1509702436404?alt=media&token=da3a7ac8-58d3-46da-a71d-c2c1c0cbdfeb",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce",
          "owner": 8,
          "reviews": Array [
            Object {
              "User": Object {
                "fullname": "John Bull",
                "id": 8,
                "username": null,
              },
              "content": "gwbvgfda",
              "createdAt": "2017-11-04T07:28:31.732Z",
              "id": 5,
              "recipeId": 3,
              "updatedAt": "2017-11-04T07:28:31.732Z",
              "userId": 8,
            },
          ],
          "upVoteCount": 1,
          "updatedAt": "2017-11-09T11:36:49.091Z",
          "viewCount": 1,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={1}
      key="106"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:36.283Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 106,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:36.283Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={2}
      key="101"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:34.864Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 101,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:34.864Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={3}
      key="20"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:09.090Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 20,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:09.090Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
  </tbody>
  <tfoot>
    <tr>
      <td
        colSpan="2"
      >
        <Pagination
          currentPage={1}
          getRecipesForPage={[Function]}
          pages={
            Array [
              1,
              2,
            ]
          }
        />
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`RecipeTableListing type: Favorites should render list of recipes without actions if not owner 1`] = `
<table
  className="my-recipe__manage--table"
>
  <thead>
    <tr>
      <th
        colSpan="2"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <RecipeTableListingRow
      asOwner={false}
      index={0}
      key="3"
      recipe={
        Object {
          "User": Object {
            "fullname": "John Bull",
            "id": 8,
            "username": null,
          },
          "createdAt": "2017-11-03T09:51:16.180Z",
          "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 3,
          "img_url": "https://firebasestorage.googleapis.com/v0/b/more-recipes.appspot.com/o/recipes%2F1509702436404?alt=media&token=da3a7ac8-58d3-46da-a71d-c2c1c0cbdfeb",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce",
          "owner": 8,
          "reviews": Array [
            Object {
              "User": Object {
                "fullname": "John Bull",
                "id": 8,
                "username": null,
              },
              "content": "gwbvgfda",
              "createdAt": "2017-11-04T07:28:31.732Z",
              "id": 5,
              "recipeId": 3,
              "updatedAt": "2017-11-04T07:28:31.732Z",
              "userId": 8,
            },
          ],
          "upVoteCount": 1,
          "updatedAt": "2017-11-09T11:36:49.091Z",
          "viewCount": 1,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={1}
      key="106"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:36.283Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 106,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:36.283Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={2}
      key="101"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:34.864Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 101,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:34.864Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={3}
      key="20"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:09.090Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 20,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:09.090Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="favorites"
    />
  </tbody>
  <tfoot>
    <tr>
      <td
        colSpan="2"
      >
        <Pagination
          currentPage={1}
          getRecipesForPage={[Function]}
          pages={
            Array [
              1,
              2,
            ]
          }
        />
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`RecipeTableListing type: Favorites should render with right amount of elements if no recipes 1`] = `
<div
  className="no-favorites"
>
  <span>
    Welcome to your favorites!
  </span>
  <span>
    Tap 
    <i
      className="mdi mdi-heart"
    />
     to save any recipe you like,
  </span>
  <span>
    and it'll show up here.
  </span>
</div>
`;

exports[`RecipeTableListing type: Favorites should render with right amount of elements if no recipes and asOwner: false 1`] = `
<div
  className="no-favorites"
>
  <span>
    This user as no favorite recipes yet...
  </span>
</div>
`;

exports[`RecipeTableListing type: Personal-Recipes should render list of recipes with actions if owner 1`] = `
<table
  className="my-recipe__manage--table"
>
  <thead>
    <tr>
      <th
        colSpan={null}
      >
        Name
      </th>
      <th>
        Actions
      </th>
    </tr>
  </thead>
  <tbody>
    <RecipeTableListingRow
      asOwner={true}
      index={0}
      key="3"
      recipe={
        Object {
          "User": Object {
            "fullname": "John Bull",
            "id": 8,
            "username": null,
          },
          "createdAt": "2017-11-03T09:51:16.180Z",
          "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 3,
          "img_url": "https://firebasestorage.googleapis.com/v0/b/more-recipes.appspot.com/o/recipes%2F1509702436404?alt=media&token=da3a7ac8-58d3-46da-a71d-c2c1c0cbdfeb",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce",
          "owner": 8,
          "reviews": Array [
            Object {
              "User": Object {
                "fullname": "John Bull",
                "id": 8,
                "username": null,
              },
              "content": "gwbvgfda",
              "createdAt": "2017-11-04T07:28:31.732Z",
              "id": 5,
              "recipeId": 3,
              "updatedAt": "2017-11-04T07:28:31.732Z",
              "userId": 8,
            },
          ],
          "upVoteCount": 1,
          "updatedAt": "2017-11-09T11:36:49.091Z",
          "viewCount": 1,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={1}
      key="106"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:36.283Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 106,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:36.283Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={2}
      key="101"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:34.864Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 101,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:34.864Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={true}
      index={3}
      key="20"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:09.090Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 20,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:09.090Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
  </tbody>
  <tfoot>
    <tr>
      <td
        colSpan="2"
      >
        <Pagination
          currentPage={1}
          getRecipesForPage={[Function]}
          pages={
            Array [
              1,
              2,
            ]
          }
        />
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`RecipeTableListing type: Personal-Recipes should render list of recipes without actions if not owner 1`] = `
<table
  className="my-recipe__manage--table"
>
  <thead>
    <tr>
      <th
        colSpan="2"
      >
        Name
      </th>
    </tr>
  </thead>
  <tbody>
    <RecipeTableListingRow
      asOwner={false}
      index={0}
      key="3"
      recipe={
        Object {
          "User": Object {
            "fullname": "John Bull",
            "id": 8,
            "username": null,
          },
          "createdAt": "2017-11-03T09:51:16.180Z",
          "description": "This is one of my 'go to' recipes and it takes only about 15 minutes from start to finish. The only prep work really is mashing the garlic. The sauce is great on any pasta, but I prefer angel hair or spaghetti.",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 3,
          "img_url": "https://firebasestorage.googleapis.com/v0/b/more-recipes.appspot.com/o/recipes%2F1509702436404?alt=media&token=da3a7ac8-58d3-46da-a71d-c2c1c0cbdfeb",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce",
          "owner": 8,
          "reviews": Array [
            Object {
              "User": Object {
                "fullname": "John Bull",
                "id": 8,
                "username": null,
              },
              "content": "gwbvgfda",
              "createdAt": "2017-11-04T07:28:31.732Z",
              "id": 5,
              "recipeId": 3,
              "updatedAt": "2017-11-04T07:28:31.732Z",
              "userId": 8,
            },
          ],
          "upVoteCount": 1,
          "updatedAt": "2017-11-09T11:36:49.091Z",
          "viewCount": 1,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={1}
      key="106"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:36.283Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 106,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:36.283Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={2}
      key="101"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:34.864Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 101,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:34.864Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
    <RecipeTableListingRow
      asOwner={false}
      index={3}
      key="20"
      recipe={
        Object {
          "User": Object {
            "fullname": "Email Mail",
            "id": 11,
            "username": null,
          },
          "createdAt": "2017-11-11T09:07:09.090Z",
          "description": "This is one of my 'go to' recipes ",
          "downVoteCount": 0,
          "favoriteCount": 0,
          "id": 20,
          "img_url": "http://images.media-allrecipes.com/userphotos/720x405/4478567.jpg",
          "ingredients": Array [
            "2 tablespoons olive oil",
            "3 cloves garlic",
            "2 tablespoons capers",
            "1 tablespoon anchovy paste",
            "1 teaspoon red pepper flakes",
            "1 (24 ounce) jar tomato pasta sauce",
            "1/4 cup water",
            "1 cup good-quality crisp white wine",
            "2 (6.5 ounce) cans chopped clams, drained with juice reserved",
            "salt and pepper to taste",
            "1 pound dry spaghetti",
            "1/4 cup freshly grated Parmesan cheese",
            "Chopped fresh basil leaves or parsley",
          ],
          "instructions": Array [
            "Pour olive oil into cold skillet. Add garlic, capers, anchovy paste, and red pepper flakes. Place over medium heat and cook and stir until the oil is infused with the flavors of the mixture, about 5 minutes, taking care not to brown the garlic. Add tomato",
            "Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until almost al dente, or about 1 minute less than directed on package. Drain. Return pasta to the pot off heat.",
            "Stir clams into the sauce. Pour sauce over pasta. Stir; cover the pot to allow it to finish cooking off heat and to allow the pasta will absorb some of the sauce, about 3 minutes. Stir in Parmesan cheese. Top with chopped fresh basil and/or parsley.",
          ],
          "name": "Chef John's Spaghetti with Red Clam Sauce dfbefadb nifek fedckltefdkletfdmlefdleff eifdanlkref",
          "owner": 11,
          "reviews": Array [],
          "upVoteCount": 0,
          "updatedAt": "2017-11-11T09:07:09.090Z",
          "viewCount": 0,
        }
      }
      removeRecipe={[Function]}
      type="personal-recipes"
    />
  </tbody>
  <tfoot>
    <tr>
      <td
        colSpan="2"
      >
        <Pagination
          currentPage={1}
          getRecipesForPage={[Function]}
          pages={
            Array [
              1,
              2,
            ]
          }
        />
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`RecipeTableListing type: Personal-Recipes should render with right amount of elements if no recipes 1`] = `
<div
  className="no-favorites"
>
  <span>
    You don't have any personal recipes yet.
  </span>
  <span>
    Share your own culinary creations! Add a recipe
  </span>
</div>
`;

exports[`RecipeTableListing type: Personal-Recipes should render with right amount of elements if no recipes and asOwner: false 1`] = `
<div
  className="no-favorites"
>
  <span>
    This user as no personal recipes yet...
  </span>
</div>
`;
